crates/peach_app/src/snapshots/peach_app__operation__tests__net_fetch_truncated.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<http_response
  url="https://example.com/large-page"
  status_code="200"
  start_char="0"
  end_char="55"
  total_chars="72"
  content_type="text/markdown"
>
<body><![CDATA[AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA]]></body>
<truncated>17 more chars not shown. Full output: read /tmp/peach_fetch_abc123.txt (the complete output).</truncated>
</http_response>
