crates/peach_app/src/snapshots/peach_app__operation__tests__shell_output_empty_streams.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="silent_command"
  shell="/bin/bash"
  exit_code="0"
>
</shell_output>
